force-app/main/default/objects/Customer__c/fields/E_Mail__c.field-meta.xml
<CustomField>
    <fullName>E_Mail__c</fullName>
    <description>E-Mail of the Customer</description>
    <label>E-Mail</label>
    <type>Email</type>
</CustomField>