force-app/main/default/objects/Customer__c/fields/On_Boarding_Date__c.field-meta.xml
<CustomField>
    <fullName>On_Boarding_Date__c</fullName>
    <label>On-Boarding Date</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>