force-app/main/default/objects/Customer__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <description>Products Subscribed To</description>
    <label>Product</label>
    <required>true</required>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>ARM - Automated release Management</fullName>
            </value>
            <value>
                <fullName>CodeScan</fullName>
            </value>
            <value>
                <fullName>Flow Center (BETA)</fullName>
            </value>
            <value>
                <fullName>RBM - Record Based Migration</fullName>
            </value>
            <value>
                <fullName>Vault</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>