force-app/main/default/objects/Customer__c/fields/Sale_Amount__c.field-meta.xml
<CustomField>
    <fullName>Sale_Amount__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Amount that has been charged for the product(s) overall</description>
    <label>Sale Amount</label>
    <precision>18</precision>
    <required>true</required>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>